--- a/cards.css
+++ b/cards.css
@@ -9,14 +9,18 @@ html {
 .icon {color: #BCD2DA;}
 
 .card {
-    /* display, flex-direction */
+    display:flex;
+    flex-direction: column;
     border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
 }
 
 .card__description {
-    /* display, flex-direction, justify-content, align-items */
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center;
     padding: 15px 0;
 }
 
@@ -40,7 +44,7 @@ html {
 }
 
 .cardGroup {
-    /* display */
+    display: flex;
   
     border: 1px solid #CAD0D2;
     border-radius: 4px;
@@ -48,7 +52,9 @@ html {
   }
   
     .cardGroup__card {
-      /* flex-grow, flex-shrink, flex-basis */
+      flex-grow: 3; 
+      flex-shrink: 1;
+      flex-basis: 0; 
   
       border: none;
       border-radius: 0;
@@ -59,5 +65,5 @@ html {
     }
   
     .cardGroup__cardDescription {
-      /* flex-grow, flex-shrink, flex-basis */
+   flex: 3 1 auto;
     }
